[package]
name = "darkness_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.1"
reqwest = {version = "0.11.11", features =["json"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
