[package]
name = "darkness-check"
description = "Find out how many hours of darkness you are in for today."
authors = ["Sarah GHP <sarahghp@axo.dev>"]
license-file = "./LICENSE"
readme = "README.md"
repository = "https://github.com/sarahghp/darkness"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15.1"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11.11", default-features = false, features = [
        "serde_json",
        "json",
        "rustls-tls",
] }
config = { version = "0.13.2", features = ["json", "toml"] }
